--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js" defer></script>
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    
+    <header class="header">
+        <h1>Tic-Tac-Toe</h1>
+    </header>
+    <main class="main">
+        <section class="player-turn-notifcation">
+            <h2 class="notification"></h2>
+        </section>
+        <section class="board-container">
+            <button id="0"></button>
+            <button id="1"></button>
+            <button id="2"></button>
+            <button id="3"></button>
+            <button id="4"></button>
+            <button id="5"></button>
+            <button id="6"></button>
+            <button id="7"></button>
+            <button id="8"></button>
+        </section>
+        <section class="restart-btn">
+            <button class="restart">Restart</button>
+        </section>
+    </main>
+    <footer class="footer">Made By: Nam Nguyen</footer>
 </body>
 </html>
